--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -13,7 +13,7 @@
     </div>
     <div class="sidebar-menu">
         <ul class="menu">
-            <li class="sidebar-title">Menu</li>
+            <li class="sidebar-title"></li>
 
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:dashboard' %}" class='sidebar-link'>
@@ -68,7 +68,7 @@
             {% if perms.auth.add_user %}
             <li class="sidebar-item">
                 <a href="{% url 'list_user' %}" class="sidebar-link">
-                    <i class="fa fa-users-cog"></i>
+                    <i class="fa fa-user"></i>
                     <span>User</span>
                 </a>
             </li>
