--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -192,7 +192,10 @@
                                 <div class="item">
                                     {% if news.image %}
                                     <img src="{{ news.image.url }}" alt="" style="height: 250px; width: 250px;">
+                                    {% else %}
+                                    <img src="{% static './assets/landing/assets/img/no.jpg' %}" alt="" style="height:172px;width:350px;">
                                     {% endif %}
+
                                     <div class="overlay">
                                         <h4>{{ news.title|safe|truncatechars_html:8 }}</h4>
                                         <p>{{ news.description|safe|truncatechars_html:10}}</p>
