--- a/auspicious/templates/page/news-details.html
+++ b/auspicious/templates/page/news-details.html
@@ -41,7 +41,11 @@
                     <div class="blog-details-wrapper">
                         <div class="blog-details-img-date-wrap mb-35 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-details-img">
+                                {% if news_qs.image %}
                                 <img src="{{ news_qs.image.url }}" alt="" style="height:400px; width:850px;">
+                                {% else %}
+                                <img src="{% static './assets/landing/assets/img/no.jpg' %}" alt="" style="height:400px; width:850px;">
+                                {% endif %}
                             </div>
                             <div class="blog-details-date">
                                 <h5>{{ news_qs.created_at.date.day }}
@@ -256,7 +260,11 @@
                                 {% for news in last_three_job_lists %}
                                 <div class="single-latest-post">
                                     <div class="latest-post-img">
-                                        <a href="{% url 'news_details' news.slug %}"><img src="{{ news.image.url }}" alt=""></a>
+                                        {% if news.image %}
+                                        <a href="{% url 'news_details' news.slug %}"><img src="{{ news.image.url }}" alt="" style="height:80px; width:100px"></a>
+                                        {% else %}
+                                        <img src="{% static './assets/landing/assets/img/no.jpg' %}" alt="" style="height:80px; width:100px">
+                                        {% endif %}
                                     </div>
                                     <div class="latest-post-content">
                                         <span>{{ news.created_at.date }}</span>
