--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -96,7 +96,7 @@
                     <a class="nav-link" href="{% url 'client' %}">Client & Sister Concern</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'news' %}">News</a>
+                    <a class="nav-link" href="{% url 'blog' %}">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
