--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -31,7 +31,7 @@
                     <div class="breadcrumbs-menu">
                         <ul>
                             <li><a href="{% url 'home' %}">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="{% url 'news' %}">News</a></li>
+                            <li class="active"><a href="{% url 'blog' %}">Blog</a></li>
                         </ul>
                     </div>
                 </div>
