--- a/dashboard/templates/dashboard/snippets/datatable.html
+++ b/dashboard/templates/dashboard/snippets/datatable.html
@@ -152,7 +152,7 @@
                         {% empty %}
                         <tr>
                             <td colspan="{{ fields_count }}" class="text-center">
-                                <div class="alert alert-warning">
+                                <div class="alert alert-info">
                                     No item found!
                                 </div>
                             </td>
