--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -130,6 +130,16 @@
             </li>
             {% endif %}
 
+            <!-- manage Blog Category -->
+
+            {% if perms.dashboard.add_blog or perms.dashboard.view_blog %}
+            <li class="sidebar-item">
+                <a href="{% url 'dashboard:create_blog' %}" class="sidebar-link">
+                    <i class="fa fa-book" aria-hidden="true"></i>
+                    <span>Blog</span>
+                </a>
+            </li>
+            {% endif %}
             <!-- manage Image Group  -->
 
             {% if perms.dashboard.add_imagegroup or perms.dashboard.view_imagegroup %}
