--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -108,13 +108,24 @@
             </li>
             {% endif %}
 
-                        <!-- manage News  -->
+            <!-- manage News  -->
 
             {% if perms.dashboard.add_news or perms.dashboard.view_news %}
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:create_news' %}" class="sidebar-link">
                     <i class="fa fa-newspaper" aria-hidden="true"></i>
                     <span>News</span>
+                </a>
+            </li>
+            {% endif %}
+
+            <!-- manage comments and replies  -->
+
+            {% if perms.dashboard.view_comment or perms.dashboard.change_comment or perms.dashboard.delete_comment or perms.dashboard.view_commentreply or perms.dashboard.change_commentreply or perms.dashboard.delete_commentreply %}
+            <li class="sidebar-item">
+                <a href="{% url 'dashboard:news_comment_list' %}" class="sidebar-link">
+                    <i class="fa fa-newspaper" aria-hidden="true"></i>
+                    <span>News Comments & Replies</span>
                 </a>
             </li>
             {% endif %}
