--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -21,7 +21,7 @@
                         {% if filtered_news_title %}
                         <h2>{{ filtered_news_title }}</h2>
                         {% else %}
-                        <h2>News</h2>
+                        <h2>Blog</h2>
                         {% endif %}
                         
                     </div>
