--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -121,11 +121,20 @@
 
             <!-- manage comments and replies  -->
 
-            {% if perms.dashboard.view_comment or perms.dashboard.change_comment or perms.dashboard.delete_comment or perms.dashboard.view_commentreply or perms.dashboard.change_commentreply or perms.dashboard.delete_commentreply %}
+            {% if perms.dashboard.view_comment or perms.dashboard.change_comment or perms.dashboard.delete_comment %}
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:news_comment_list' %}" class="sidebar-link">
                     <i class="fa fa-newspaper" aria-hidden="true"></i>
-                    <span>News Comments & Replies</span>
+                    <span>News Comments</span>
+                </a>
+            </li>
+            {% endif %}
+
+            {% if perms.dashboard.view_commentreply or perms.dashboard.change_commentreply or perms.dashboard.delete_commentreply %}
+            <li class="sidebar-item">
+                <a href="{% url 'dashboard:news_comment_reply_list' %}" class="sidebar-link">
+                    <i class="fa fa-newspaper" aria-hidden="true"></i>
+                    <span>News Comment Replies</span>
                 </a>
             </li>
             {% endif %}
